[package]
name = "midtransclient"
version = "0.1.0"
edition = "2021"
authors = ["Kurnia Wanto <wanto47@gmail.com>"]
description = "Unofficial Rust API client/library for Midtrans Payment API"

[dependencies]
chrono = "0.4.22"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
