[package]
name = "midtransclient"
version = "0.1.2"
edition = "2021"
authors = ["Kurnia Wanto <wanto47@gmail.com>"]
description = "Unofficial Rust API client/library for Midtrans Payment API"
repository = "https://github.com/wantotri/midtransclient-rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
chrono = "0.4.22"
